--- a/src/style.css
+++ b/src/style.css
@@ -37,12 +37,48 @@ body {
   grid-template: 0.5fr 3fr / 1fr;
 }
 
+#doing,
+#will,
+#done {
+  display: grid;
+  grid-template-rows: 1fr 3fr 2fr;
+}
+
 .page-doing-container {
   background-image: url("./components/images/doing.jpg");
   background-position: center;
   background-size: cover;
   height: 100%;
   width: 100%;
+}
+
+#return-text {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: rgba(255, 255, 255, 0.548);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+
+#return-text:hover {
+  background-color: white;
+}
+
+.submit-btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#submitBtn {
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 10px;
+  width: 120px;
+  height: 40px;
 }
 
 .page-will-container {
