--- a/src/style.css
+++ b/src/style.css
@@ -41,23 +41,27 @@ body {
 #will,
 #done {
   display: grid;
-  grid-template-rows: 1fr 3fr 2fr;
+  grid-template-rows: 1fr 3.5fr 1fr;
 }
 
 #doing > fieldset,
 #will > fieldset,
 #done > fieldset {
-  grid-row: 2 / 3 ;
-  width: 35%;
+  grid-row: 2 / 3;
+  width: 40%;
+  height: 100%;
   justify-self: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr) 3fr;
   background-color: white;
 }
 
-.projNameContainer {
+.projNameContainer,
+.projTimeContainer,
+.projDateContainer {
   padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
 .projNameContainer > label {
@@ -69,6 +73,33 @@ input[type="text"] {
   height: 30px;
 }
 
+input[type="time"] {
+  width: 80px;
+  height: 30px;
+}
+
+input[type="date"] {
+  width: 120px;
+  height: 30px;
+}
+
+.projTextContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+textarea {
+  justify-self: center;
+  resize: none;
+  width: 420px;
+  height: 180px;
+  padding: 10px;
+}
+
+.projTimeContainer > label {
+  padding-right: 30px;
+}
 
 .page-doing-container {
   background-image: url("./components/images/doing.jpg");
@@ -101,10 +132,15 @@ input[type="text"] {
 
 #submitBtn {
   background-color: transparent;
-  border: 2px solid white;
+  border: 3px solid black;
   border-radius: 10px;
   width: 120px;
   height: 40px;
+  align-self: center;
+}
+
+#submitBtn:hover {
+  background-color: grey;
 }
 
 .page-will-container {
