--- a/src/style.css
+++ b/src/style.css
@@ -311,18 +311,29 @@ textarea {
   background-color: white;
   width: 23%;
   height: 67%;
-  border-radius: 25px;
   padding: 20px;
   border: 2px solid black;
+  display: grid;
+  grid-template-rows: repeat(8, 1fr);
+  align-items: center;
+}
+
+.card > h5 {
+  width: 2rem;
 }
 
 .card > h4 {
+  justify-self: center;
   font-family: "Demiths";
-  font-size: 15px;
-  border-bottom: 2px solid black;
-  border-radius: 10px;
-  width: 100px;
+  border-bottom: 3px solid black;
+  font-size: 14px;
+  width: 6rem;
   text-align: center;
+}
+
+.none {
+  font-style: italic;
+  font-weight: 400;
 }
 
 .add-item {
