It only needs delete button before being completed, maybe i could make it open for change, but will see how long it would take me to do

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@
   --hover-gray: #cbd5e1;
   --border-btn: #64748b;
   --btn-color: #ecfeff;
-  --non-bright-var: #fafafa;
+  --non-bright-var: #f4f4f4;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap");
@@ -216,6 +216,7 @@ textarea {
 #wrap-choose > div:hover {
   background-color: rgba(224, 221, 221, 0.627);
   cursor: pointer;
+  transition: 1s;
 }
 
 .doing-wrap {
@@ -291,6 +292,52 @@ textarea {
 .none {
   font-style: italic;
   font-weight: 400;
+}
+
+.page-see {
+  background-image: url("./components/images/back-red-blue.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template: 1fr 3fr 2fr / 1fr 3fr 1fr;
+}
+
+.field-see {
+  grid-area: 2 / 2 / 3 / 3;
+  display: grid;
+  background-color: var(--non-bright-var);
+  border: 2px solid black;
+}
+
+.btn-next-container {
+  justify-self: center;
+  align-self: center;
+  grid-area: 3 / 3 / 3 / 3;
+}
+
+.btn-prev-container {
+  justify-self: center;
+  align-self: center;
+  grid-area: 3 / 1 / 3 / 1;
+}
+
+.btn-prev,
+.btn-next {
+  width: 120px;
+  height: 40px;
+  border-radius: 15px;
+  border: 2px solid var(--border-btn);
+  background-color: var(--btn-color);
+  transition: 0.3s;
+}
+
+.btn-next:hover,
+.btn-prev:hover {
+  border: 2px solid black;
+  background-color: var(--hover-gray);
+  cursor: pointer;
 }
 
 /* ================= */
@@ -377,6 +424,7 @@ textarea {
 #return-text:hover {
   border: 3px solid black;
   background-color: var(--hover-gray);
+  cursor: pointer;
 }
 
 /* -------- */
@@ -402,6 +450,7 @@ textarea {
 #submitBtn:hover {
   background-color: var(--hover-gray);
   border: 2px solid black;
+  cursor: pointer;
 }
 
 /* -------- */
