--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
 }
 
 :root {
+  --spec-size: 80px;
   --btn-size: 70px;
   --hover-gray: #cbd5e1;
   --border-btn: #64748b;
@@ -59,7 +60,8 @@ body {
 
 #write > .field-write {
   grid-row: 2 / 3;
-  width: 40%;
+  padding: 10px;
+  width: 45%;
   height: 100%;
   justify-self: center;
   display: grid;
@@ -161,6 +163,7 @@ textarea {
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .back-choose {
@@ -196,6 +199,7 @@ textarea {
   justify-content: center;
   align-items: center;
   background-color: var(--non-bright-var);
+  transition: 0.3s;
 }
 
 .item-name,
@@ -216,7 +220,9 @@ textarea {
 #wrap-choose > div:hover {
   background-color: rgba(224, 221, 221, 0.627);
   cursor: pointer;
-  transition: 1s;
+  border: 4px solid black;
+  width: 170px;
+  height: 70px;
 }
 
 .doing-wrap {
@@ -274,6 +280,14 @@ textarea {
   display: grid;
   grid-template-rows: repeat(8, 1fr);
   align-items: center;
+  transition: 0.3s;
+}
+
+.card:hover {
+  width: 26%;
+  height: 76%;
+  border: 4px solid black;
+  cursor: pointer;
 }
 
 .card > h5 {
@@ -308,7 +322,9 @@ textarea {
   grid-area: 2 / 2 / 3 / 3;
   display: grid;
   background-color: var(--non-bright-var);
-  border: 2px solid black;
+  border: 1px solid black;
+  box-shadow: 0px 0px 2px 3px black;
+  transition: 0.3s;
 }
 
 .btn-next-container {
@@ -325,6 +341,7 @@ textarea {
 
 .btn-prev,
 .btn-next {
+  font-family: "Demiths";
   width: 120px;
   height: 40px;
   border-radius: 15px;
@@ -335,9 +352,11 @@ textarea {
 
 .btn-next:hover,
 .btn-prev:hover {
-  border: 2px solid black;
+  border: 4px solid black;
   background-color: var(--hover-gray);
   cursor: pointer;
+  width: 130px;
+  height: 50px;
 }
 
 /* ================= */
@@ -364,8 +383,10 @@ textarea {
 
 .add-item:hover {
   background-color: var(--hover-gray);
-  border: 2px solid black;
   cursor: pointer;
+  border: 4px solid black;
+  width: var(--spec-size);
+  height: var(--spec-size);
 }
 
 .add-item > svg {
@@ -400,7 +421,9 @@ textarea {
 
 .see-item:hover {
   background-color: var(--hover-gray);
-  border: 2px solid black;
+  border: 4px solid black;
+  width: var(--spec-size);
+  height: var(--spec-size);
   cursor: pointer;
 }
 
@@ -422,7 +445,9 @@ textarea {
 }
 
 #return-text:hover {
-  border: 3px solid black;
+  border: 4px solid black;
+  width: var(--spec-size);
+  height: var(--spec-size);
   background-color: var(--hover-gray);
   cursor: pointer;
 }
@@ -445,12 +470,15 @@ textarea {
   height: 40px;
   align-self: center;
   font-family: "Demiths";
+  transition: 0.3s;
 }
 
 #submitBtn:hover {
   background-color: var(--hover-gray);
-  border: 2px solid black;
+  border: 4px solid black;
   cursor: pointer;
+  width: 130px;
+  height: 50px;
 }
 
 /* -------- */
