--- a/src/style.css
+++ b/src/style.css
@@ -206,7 +206,7 @@ textarea {
 .item-time,
 .item-date,
 .item-text {
-  display: flex;
+  display: block;
   padding: 5px;
 }
 
@@ -333,10 +333,41 @@ textarea {
   grid-area: 3 / 3 / 3 / 3;
 }
 
+.btn-delete-container {
+  justify-self: center;
+  align-self: center;
+  grid-area: 3 / 2 / 3 / 2;
+}
+
 .btn-prev-container {
   justify-self: center;
   align-self: center;
   grid-area: 3 / 1 / 3 / 1;
+}
+
+.btn-delete {
+  width: 50px;
+  height: 50px;
+  transition: 0.3s;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  background-color: var(--btn-color);
+}
+
+.btn-delete > svg {
+  width: 40px;
+  height: 40px;
+}
+
+.btn-delete:hover {
+  background-color: var(--hover-gray);
+  width: 60px;
+  height: 60px;
+  border: 4px solid black;
+  cursor: pointer;
 }
 
 .btn-prev,
